# Insta360CameraSDKPythonWrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  setup.sh  wrapper.cpp
sdk/: .gitkeep
